correcting footer bug on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,6 +6,8 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  /* bottom: 0; */
 }
 
 footer .social-media-container {
