--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -3,7 +3,7 @@
   margin-top: 55px;
 }
 
-form {
+.auth-form {
   width: 100%;
   display: flex;
   flex-direction: column;
